Page header should not have a fixed height on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -626,6 +626,10 @@ h1, h2, h3, h4, h5, h5 {
   height: 88px;
   background-color: $lighter-grey;
 
+  @media (max-width: $screen-xs-max) {
+    height: auto;
+  }
+
   .page-header {
     font-family: $font-family-extra-bold;
     font-size: 30px;
